<resources>
    <string name="app_name">AT-App</string>
    <string name="app_name_sub">Front End Development</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Drawer header -->
    <string name="drawer_header_nav_bg">http://www.little-bamboo.com/images/blog/research-data.jpg</string>
    <string name="drawer_header_profile_bg">http://www.grafile.com/wp-content/plugins/all-in-one-seo-pack-pro/images/default-user-image.png</string>

    <!-- Drawer section titles -->
    <string name="drawer_section_title_account">Account</string>

    <!-- Drawer titles -->
    <string name="drawer_title_projects">Projects</string>
    <string name="drawer_title_project_new">New project</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_signout">Sign Out</string>
    <string name="drawer_title_edit_profile">Edit profile</string>

    <!-- Toast messages -->
    <string name="toast_signed_in">Successfully signed in</string>
    <string name="toast_add_succesful">Succesfully added</string>
    <string name="toast_add_failed">Add failed</string>
    <string name="toast_change_succesful">Succesfully changed</string>
    <string name="toast_change_failed">Change failed</string>
    <string name="toast_delete_succesful">Succesfully Deleted</string>
    <string name="toast_delete_failed">Delete failed</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Projects</item>
        <item>New Project</item>
        <item>Edit Profile</item>
        <item>AT-App</item>
        <item>AT-App</item>
    </string-array>

    <!-- project new -->
    <string name="project_new_name">Project name</string>
    <string name="project_new_name_text">Project name</string>
    <string name="project_new_description">Project description</string>
    <string name="project_new_description_text">Project description</string>

    <!-- project detail -->
    <string name="project_detail_name">Project name</string>
    <string name="project_detail_name_text">Project name</string>
    <string name="project_detail_description">Project description</string>
    <string name="project_detail_description_text">Project description</string>
    <!-- project detail actors -->
    <string name="project_detail_actors">Actors</string>
    <string name="project_detail_actor_name">Actor name</string>
    <string name="project_detail_actor_name_text">Actor name</string>
    <string name="project_detail_actor_description">Actor description</string>
    <string name="project_detail_actor_description_text">Actor description</string>

    <!-- buttons -->
    <string name="button_save">Save</string>
    <string name="button_save_project">Save project</string>
    <string name="button_new_actor">New actor</string>

    <!--Actor item list-->
    <string name="actor_list_name">Name: </string>
    <string name="actor_list_function">Function: </string>
    <string name="actor_list_email">Email: </string>
    <string name="actor_list_notes">Notes: </string>
    <string name="project_new_title">Project title</string>
    <string name="text_button_add_new_project">Add new project</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="text_button_delete_project">Delete Project</string>

    <string name="hint_user_id">User ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_chooser">ChooserActivity</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to sign in</string>

    <!-- google auth -->
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add_new_actor">Add actor to project</string>
    <string name="signed_in">Successfully signed in</string>
    <string name="chooser_title">Choose your way to sign in</string>
    <string name="button_add_person_to_actor">Add person to actor</string>
    <string name="button_edit_person">Save changes</string>

    <!-- Person -->
    <string name="hint_function">Function</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phonenumber</string>
    <string name="hint_sidenote">Sitenote</string>

    <string name="defaultProfilePhoto">https://lh4.googleusercontent.com/-6Cewl5Wyx7I/AAAAAAAAAAI/AAAAAAAAAAA/tWZWErkqLCE/W40-H40/photo.jpg?sz=64</string>
    <string name="hint_number">Number</string>
    <string name="hint_notes">Notes</string>
    <string name="teamlid">Teamlid</string>
    <string name="analist">Analist</string>
    <string name="edit_actor">Edit actor</string>

</resources>
