<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/text_padding" >

    <ImageView
        android:id="@+id/user_profile_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_padding"
        android:gravity="center">

        <TextView
            android:id="@+id/actor_name"
            android:text="@string/hint_name"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/actor_function"
            android:text="@string/hint_function"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/actor_email"
            android:text="@string/hint_email"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/actor_number"
            android:text="@string/hint_number"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/actor_notes"
            android:text="@string/hint_notes"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>