<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.hu.frontenddevelopment.Fragment.ActorNewFragment">

    <ImageView
        android:id="@+id/person_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toLeftOf="@+id/person_name"
        app:srcCompat="@drawable/ic_person_black_24dp"/>

    <EditText
        android:id="@+id/person_name"
        android:hint="@string/hint_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/min_et_width"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/person_email"
        android:hint="@string/hint_email"
        android:layout_below="@+id/person_name"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/min_et_width"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/person_phonenumber"
        android:hint="@string/hint_phone"
        android:layout_below="@+id/person_email"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/min_et_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="phone" />

    <EditText
        android:id="@+id/person_sidenotes"
        android:hint="@string/hint_sidenote"
        android:layout_below="@+id/person_phonenumber"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/min_et_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_save_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_edit_person"
        android:textColor="@color/colorTextWhite"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/button_margin" />
</RelativeLayout>