<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_project_new_project"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.hu.frontenddevelopment.View.ProjectNewActivity">

    <EditText
        android:id="@+id/project_new_title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:hint="@string/project_new_title"/>

    <EditText
        android:id="@+id/project_new_description"
        android:layout_below="@+id/project_new_title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:hint="@string/project_new_description"/>

    <Button
        android:id="@+id/button_add_new_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_button_add_new_project"
        android:textColor="@color/colorTextPrimary"
        android:background="@color/colorPrimaryLight" />


</RelativeLayout>

