<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.hu.frontenddevelopment.Fragment.ProjectNewFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:layout_margin="20px">

            <!-- Project name -->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/project_new_name"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/project_new_name"
                    android:textSize="10pt">
                </TextView>
                <EditText
                    android:id="@+id/project_new_name_text"
                    android:layout_height="match_parent"
                    android:hint="@string/project_new_name_text"
                    android:inputType="textPersonName"
                    android:layout_width="fill_parent">
                </EditText>
            </LinearLayout>

            <!-- Project description -->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/project_new_description"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/project_new_description"
                    android:textSize="10pt">
                </TextView>
                <EditText
                    android:id="@+id/project_new_description_text"
                    android:layout_height="match_parent"
                    android:hint="@string/project_new_description_text"
                    android:inputType="textPersonName"
                    android:layout_width="fill_parent">
                </EditText>
            </LinearLayout>

            <!-- Button -->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <Button android:id="@+id/project_new_button"
                    android:onClick="myClickMethod"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/drawer_title_project_new"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
